--- a/_config.yml
+++ b/_config.yml
@@ -268,6 +268,9 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
 
+gems:
+  - jemoji
+
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
 
