--- a/_config.yml
+++ b/_config.yml
@@ -218,6 +218,7 @@ date_format: "%B %-d, %Y"
 paginate: 5
 paginate_path: "blog/page:num"
 
+#sort_field: 'release_date'
 
 # --- You don't need to touch anything below here (but you can if you want) --- #
 
